# foxyram

./: .gitignore  CMakeLists.txt  README.md  client.c  main.c
ds/: linkedlist.c  set.c
include/: client.h  server.h  shell.h
include/ds/: linkedlist.h  set.h
src/: client.c  server.c  shell.c
